# OpenGLPractices

./: .gitignore  README.md
01-CreateWindow/: 01-CreateWindow.sln
01-CreateWindow/01-CreateWindow/: 01-CreateWindow.vcxproj  main.cpp
02-HelloTriangle/: 02-HelloTriangle.sln
02-HelloTriangle/02-HelloTriangle/: 02-HelloTriangle.vcxproj  Main.cpp
03-Shaders/: 03-Shaders.sln
03-Shaders/03-Shaders/: 03-Shaders.vcxproj  03-Shaders.vcxproj.filters  Main.cpp
04-Textures/: 04-Textures.sln
04-Textures/04-Textures/: 04-Textures.vcxproj  04-Textures.vcxproj.filters  Main.cpp  Shader.h  triangleShader.fs  triangleShader.vs
05-Transforms/: 05-Transforms.sln
05-Transforms/05-Transforms/: 05-Transforms.vcxproj  05-Transforms.vcxproj.filters  Main.cpp
06-Coordinate-System/: 06-Coordinate-System.sln
06-Coordinate-System/06-Coordinate-System/: 06-Coordinate-System.vcxproj  06-Coordinate-System.vcxproj.filters  Main.cpp  Shader.cpp  triangleShader.vs
07-Camera/: 07-Camera.sln  CMakeLists.txt  Camera.h  Main.cpp  Shader.h  triangleShader.vs
07-Camera/07-Camera/: 07-Camera.vcxproj  07-Camera.vcxproj.filters  Camera.cpp  Main.cpp
08-Colors/: 08-Colors.sln  CMakeLists.txt  Camera.h  Shader.cpp  Shader.h
08-Colors/08-Colors/: 08-Colors.vcxproj  08-Colors.vcxproj.filters  Main.cpp  lightShader.fs  triangleShader.fs
09-BasicLight/: CMakeLists.txt  Main.cpp  triangleShader.fs  triangleShader.vs
10-Materials/: CMakeLists.txt  Main.cpp  triangleShader.fs  triangleShader.vs
11-LightingMaps/: CMakeLists.txt  Main.cpp  lightShader.vs  triangleShader.fs  triangleShader.vs
12-LightCasters/: Main.cpp  triangleShader.fs
12-LightCasters/solution/: 12-LightCasters.sln  12-LightCasters.vcxproj  12-LightCasters.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
13-MultipleLights/: CMakeLists.txt  Main.cpp
13-MultipleLights/shaders/: cube.fs
13-MultipleLights/solution/: 12-LightCasters.sln  12-LightCasters.vcxproj  12-LightCasters.vcxproj.filters  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
14-MeshAndModel/: CMakeLists.txt  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h
14-MeshAndModel/shaders/: model.vs
15-DepthTest/: CMakeLists.txt  Main.cpp
16-StencilTest/: Main.cpp
17-Blending/: CMakeLists.txt  Main.cpp
17.1-Blending/: CMakeLists.txt  Main.cpp
17.1-Blending/shaders/: cube_shader.fs
18-FaceCulling/: CMakeLists.txt  Main.cpp
19-FrameBuffers/: CMakeLists.txt
19-FrameBuffers/shaders/: framebuffers.fs
19.1-FrameBuffers-Postprocessing/: CMakeLists.txt  Main.cpp  Mesh.cpp
19.1-FrameBuffers-Postprocessing/shaders/: framebuffers_screen.fs  rectangle.fs
20-Cubemaps/: CMakeLists.txt  Main.cpp
20.1-Reflection/: CMakeLists.txt  Main.cpp
20.2-Refraction/: CMakeLists.txt  Model.cpp
20.3-Exercise/: CMakeLists.txt  Main.cpp  Model.cpp
20.3-Exercise/shaders/: model.fs
21-UniformBuffers/: CMakeLists.txt  Main.cpp  Shader.cpp
21-UniformBuffers/shaders/: blue.fs
22-GeometryShaders/: CMakeLists.txt  Main.cpp
22-GeometryShaders/shaders/: shader.gs  shader.vs
22.1-ExplodingObjects/: CMakeLists.txt  Main.cpp
22.1-ExplodingObjects/shaders/: model.gs
23-Instancing/: CMakeLists.txt  Main.cpp  Model.h  Shader.cpp  Shader.h
23-Instancing/shaders/: shader.fs  shader.vs
23.1-Asteroids/: CMakeLists.txt  Main.cpp  Mesh.h  Model.h
23.1-Asteroids/shaders/: lamp.fs  model.vs
24-Anti-Aliasing/: Main.cpp
24-Offscreen-MSAA/: CMakeLists.txt  Main.cpp
24-Offscreen-MSAA/shaders/: cube.fs
25-AdvanceLighting/: CMakeLists.txt
25-AdvanceLighting/shaders/: cube.fs
26-GamaCorrection/: CMakeLists.txt  Main.cpp
26-GamaCorrection/shaders/: gama_correction.vs
27-ShadowMapping/: CMakeLists.txt  Main.cpp
27-ShadowMapping/shaders/: gama_correction.fs  light.fs
28-PointShadows/: CMakeLists.txt  Main.cpp  Shader.cpp
28-PointShadows/shaders/: light.fs  light.vs
29-NormalMapping/: CMakeLists.txt
29.1-NormalMapping/: CMakeLists.txt  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp
29.1-NormalMapping/shaders/: normalMapping.fs  normalMapping.vs
30-ParallaxMapping/: CMakeLists.txt  Main.cpp
30-ParallaxMapping/shaders/: normalMapping.fs
31-HDR/: CMakeLists.txt  Main.cpp
31-HDR/shaders/: hdr.fs  lighting.fs  lighting.vs
32-Bloom/: CMakeLists.txt  Main.cpp
32-Bloom/shaders/: bloom.fs  blur.fs  final.fs  lightbox.fs
33-DeferredShading/: CMakeLists.txt  Main.cpp  Mesh.cpp  Shader.cpp  Shader.h
33-DeferredShading/shaders/: deferred_shading.frag  deferred_shading.fs  g_buffer.frag  g_buffer.fs
34-SSAO/: CMakeLists.txt  Main.cpp  Shader.cpp  Shader.h
34-SSAO/shaders/: deferred_shading.frag  g_buffer.frag  ssao.frag  ssao_blur.frag
HelloTriangle/: HelloTriangle.sln
HelloTriangle/HelloTriangle/: HelloTriangle.vcxproj
OpenGL Project/: OpenGL Project.sln
OpenGL Project/OpenGL Project/: OpenGL Project.vcxproj
(+8 files in other folders)
